<resources>
    <string name="app_name">Novel</string>

    <string name="sp_login">登录</string>
    <string name="sp_register">注册</string>

    <string name="gu_log">Novel</string>

    <string name="lg_email">邮箱:</string>
    <string name="lg_password">密码:</string>
    <string name="lg_sign">登录</string>

    <string name="rg_vcode">验证码:</string>

    <string name="rg_getcode">获取验证码</string>

    <string name="rg_ok">确定</string>


    <string name="title_home">首页</string>
    <string name="title_find">发现</string>
    <string name="title_Contacts">通信录</string>
    <string name="title_me">我的</string>

    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_search">搜索</string>
    <string name="home_more">更多</string>
    <string name="no_network">网络故障！</string>
    <string name="home_novel_search">百度搜索</string>
    <string name="home_novel_follow">关注</string>


    <!-- TODO: Me Page text -->
    <string name="me_name">加载中...</string>
    <string name="me_userdsep">这家伙很懒什么都没有留下...</string>
    <string name="me_vip">会员</string>
    <string name="me_shop">商城</string>
    <string name="me_walkt">钱包</string>
    <string name="me_list_name">加载中</string>
</resources>
