<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/rg_em_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_email" />

            <EditText
                android:id="@+id/rg_em_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/rg_pw_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_password" />

            <EditText
                android:id="@+id/rg_pw_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/rg_code_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rg_vcode" />

            <EditText
                android:id="@+id/code_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/rg_getCode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rg_getcode" />
        </TableRow>

        <Button
            android:id="@+id/rg_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rg_ok" />

    </TableLayout>
</RelativeLayout>