<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/lg_ad_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/lg_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/tableRow_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lg_em_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_email" />

            <EditText
                android:id="@+id/email_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lg_pw_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_password" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <Button
            android:id="@+id/sign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lg_sign"
            android:textAllCaps="false" />

    </TableLayout>
</LinearLayout>